fix: overlapping text on larger screens

--- a/src/app/pages/Designathons/Designathon24/components/Splash/Splash.module.scss
+++ b/src/app/pages/Designathons/Designathon24/components/Splash/Splash.module.scss
@@ -13,7 +13,7 @@
 		padding-bottom: 60%;
 
 		@media screen and (min-width: 800px) {
-			padding-bottom: 30%;
+			padding-bottom: 40%;
 		}
 
 		path {
